@@ -19,7 +19,6 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static com.google.common.base.Strings.isNullOrEmpty;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.HEARING_STATUS_HEARD;
@@ -200,9 +199,9 @@ public final class HearingsHelper {
         }
 
         List<DateListedTypeItem> earliestDatePerHearing = hearingCollection.stream()
-                .map(HearingsHelper::mapEarliest)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+            .map(HearingsHelper::mapEarliest)
+            .filter(Objects::nonNull)
+            .toList();
 
         if (earliestDatePerHearing.isEmpty()) {
             return null;
@@ -223,9 +222,9 @@ public final class HearingsHelper {
 
     private static List<DateListedTypeItem> filterFutureHearings(List<DateListedTypeItem> hearingDateCollection) {
         return hearingDateCollection.stream()
-                .filter(d -> isDateInFuture(d.getValue().getListedDate(), LocalDateTime.now())
-                        && HEARING_STATUS_LISTED.equals(d.getValue().getHearingStatus()))
-                .collect(Collectors.toList());
+            .filter(d -> isDateInFuture(d.getValue().getListedDate(), LocalDateTime.now())
+                    && HEARING_STATUS_LISTED.equals(d.getValue().getHearingStatus()))
+            .toList();
     }
 
     public static String getHearingVenue(HearingType hearing) {
